# polkaudit

./: .editorconfig  .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild.backend-dashboard.yaml  cloudbuild.yaml  docker-compose.yml  env.hybrid.example
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.sh  verify_async.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0cec930deffe_add_integration_models.py  0e753a03bb3d_add_external_id_to_proposals.py  29912f84cb01_add_is_public_to_projects.py  3c6b32ba9b56_add_reports_table.py  3c847a899433_add_multichain_fields.py  3c92432ac0b4_add_alert_models.py  3dc549d507ce_add_analytics_and_forecast_models.py  4495c46549b9_add_projects_table_and_relations.py  674ce6f89558_add_audit_models.py  a1aed0cfdda1_add_scoring_models.py  ad2534ecb4cd_add_users_table.py  b1c2d3e4f5a6_add_core_governance_tables.py  dbeb6b3ff889_add_compliance_models.py  ea60919d42b9_add_project_id_to_alert_history.py  eefce3b96f0e_init.py  ef4f204be90b_add_ai_recommendation_model.py
apps/backend/src/: auth.py  config.py  database.py  db_url.py  dependencies.py  errors.py  main.py  middleware.py  security.py  tenant_middleware.py
apps/backend/src/ai/: provider.py  service.py
apps/backend/src/api/: admin.py  auth.py
apps/backend/src/audit/: service.py
apps/backend/src/chains/: adapters.py  base.py  service.py
apps/backend/src/compliance/: service.py
apps/backend/src/integrations/: base.py  discord.py  slack.py
apps/backend/tests/: test_analytics.py
apps/indexer/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-minimal.txt  requirements.txt  run.sh
apps/indexer/migrations/: env.py
apps/indexer/src/: config.py  database.py  db_url.py  health.py  logging_config.py  main.py  models.py  parser.py  scanner.py  server.py
apps/indexer/tests/: test_parser.py  test_scanner.py
(+127 files in other folders)
