[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for PolkAudit"
authors = ["Admin <admin@polkaudit.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.28.0"
alembic = "^1.11.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.0"
structlog = "^23.1.0"
slowapi = "^0.1.8"
asgi-correlation-id = "^4.2.0"
fpdf2 = "^2.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
email-validator = "^2.0.0"
aiosmtplib = "^2.0.0"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
